el parser completo. Tengo que ver como le paso las config y el fichero de los JSON
